--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="jumbotron">
         <h1>Proyecto para Comisión 55295 Javascript Julio 2023</h1>
         <p> Gadget de informcaion de Clima pata planificaion de despachos</p>
-        <p> Leer info del Clima desde una API on line y despcgarla para el usuario usan Javascript</p>
+        <p> Leer info del Clima desde una API on line y Desplegarla para el usuario usan Javascript</p>
         <p><a class="btn btn-primary btn-lg" role="button">Leer mas</a></p>
       </div>
     </div>
