--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <p class="footer-company-motto">Proyecto Info Clima</p>
     <p class="footer-derechos">Desarrolado para la Empresa........ 2023</p>
     <div class="logo">
-      <img src="/images/logo_menu.png" alt="logo" class="logo">
+      <!-- <img src="/images/logo_menu.png" alt="logo" class="logo"> -->
     </div> 
   </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
